# yeti_radar_odometry

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: feature_matching.yaml  icp_lidar_loc.yaml
docker/: Dockerfile
include/: association.hpp  radar_utils.hpp
scripts/: download_data.sh  evaluate_odometry.py  extract.py  extract3.py  get_localization_accuracy.py  plot_gps.py  plot_scan_matching_accuracy.py
src/: association.cpp  lidar_loc_gt.cpp  localization.cpp  odometry.cpp  radar_utils.cpp  save_cartesians.cpp  scan_matching_basic.cpp  showcase_distortion.cpp  test_localization.cpp  visualization.cpp
yeti/: CMakeLists.txt  package.xml
yeti/config/: feature_matching.yaml  icp.yaml
yeti/include/: association.hpp  features.hpp  radar_utils.hpp
yeti/scripts/: evaluate_odometry.py  extract.py  extract2.py  get_localization_accuracy.py  get_radar_gt.py  multiple.sh  plot_scan_matching_accuracy.py  run_multiple.py
yeti/src/: association.cpp  build_map.cpp  features.cpp  radar_utils.cpp  scan_matching.cpp  scan_matching_basic.cpp  showcase_distortion.cpp  test_association.cpp  test_doppler_distortion.cpp  test_feature_matching.cpp  test_localization.cpp  test_motiondistortion.cpp  test_scan_matching.cpp  visualization.cpp
yeti_features/: CMakeLists.txt  package.xml
yeti_features/include/: features.hpp  radar_utils.hpp
yeti_features/src/: feature_extraction.cpp  features.cpp  radar_utils.cpp  visualization.cpp
yeti_mapping/: CMakeLists.txt  package.xml
yeti_mapping/src/: mapping.cpp  scan_matching.cpp
