<?xml version="1.0"?>
<package>
  <name>yeti</name>
  <version>0.0.1</version>
  <description>The yeti package</description>
  <maintainer email="keenan.burnett@robotics.utias.utoronto.ca">keenan</maintainer>
  <author>Keenan Burnett</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
