<?xml version="1.0"?>
<package>
  <name>yeti_mapping</name>
  <version>0.0.1</version>
  <description>The yeti_mapping package</description>
  <maintainer email="keenan.burnett@robotics.utias.utoronto.ca">keenan</maintainer>
  <author>Keenan Burnett</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>steam</build_depend>
  <build_depend>lgmath</build_depend>
  <build_depend>yeti_features</build_depend>
  <run_depend>steam</run_depend>
  <run_depend>lgmath</run_depend>
  <run_depend>yeti_features</run_depend>
  <export>
  </export>
</package>
